{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "Movement",
            "id": "dbc0fb8a-c0ec-4892-bacb-8438a1b4cece",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "48468bb3-dffd-4ec3-b2c1-691f320c15f4",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Move",
                    "id": "5f0c3b7d-8327-442f-b511-14699979aa7d",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Left",
                    "id": "285a1a27-7638-47ba-ae2e-724c01932023",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "b49b8e91-5e6a-42e9-b53f-6fefc77c8d29",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Forward",
                    "id": "49d52901-ca3c-475a-8894-d7fd28d73e0f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Backward",
                    "id": "1b6f6d75-abe3-4874-bb2c-6db2f64cc51c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}